# Micropython_ESP-S3_LVGL

./: .gitignore  README.md  boot.py  data_manager.py  debug_touch.py  display.py  host_monitor_screen.py  main.py  mqtt_client.py  ntp.py  pyproject.toml  sensors.py  sensors_screen.py  status_led.py  status_led_rgb.py  task_handler.py  test.py  test_icon.py  timer.py  touch_cal.py  touch_test.py  vps_monitor_screen.py  weather.py  weather_screen.py  wifi.py
firmware/: Firmware_build_flash.txt  partitions.csv
scripts/: OpenWeatherMap_Icon_Downloader.py  convert_icons.py
