[project]
name = "esp32-lvgl-project"
version = "0.1.0"
description = "ESP32-S3 Display System with LVGL and MQTT"
dependencies = []

[tool.ruff]
# Entspricht deinem Wunsch nach sauberem Code
line-length = 88
target-version = "py311" # MicroPython ist nah an 3.11

[tool.ruff.lint]
# Aktiviere die Regeln, die wir besprochen haben
select = ["E", "F", "C90", "TRY", "PERF", "BLE"]
ignore = []

[tool.pyright]
# Basis-Einstellungen für MicroPython
include = ["."]
exclude = ["**/__pycache__"]

# Unterdrücke die nervigen Fehler
reportMissingImports = false
reportMissingModuleSource = false
reportUnresolvedImport = false
reportAttributeAccessIssue = false
reportOperatorIssue = false # Hilft gegen die // und - Fehler bei bytearray
reportOptionalMemberAccess = false
[dependency-groups]
dev = [
    "micropython-esp32-s3-stubs>=1.20.0.post1",
]
